# how-to-show-data

./: LICENSE  README.md  pyproject.toml
Bar Graphs/: README.md
Frequency Distribution/: README.md
Histograms/: README.md
Line Graphs/: README.md
Pictographs/: README.md
Pie Charts/: README.md
Scatter Plots/: README.md
